@startuml
'https://plantuml.com/class-diagram

interface ITokenize {
    List<String> tokenize()
}
class TachTu {
    - String s
}
class TokenDecorator {
    public List<String> tokenize()
}
class LoaiBoTuDung {
    private List<String> tuDungs
}
class LoaiBoDauCau

ITokenize <|.. TachTu
ITokenize <|.. TokenDecorator
ITokenize <--- TokenDecorator: tokens
TokenDecorator <|-- LoaiBoTuDung
TokenDecorator <|-- LoaiBoDauCau

@enduml